--- a/Makefile-l
+++ b/Makefile-l
@@ -1,4 +1,12 @@
-all: Server.class
+# This file is for Travis CI.
+
+all: Server.class oj/ready.o oj/submit.o
 
 Server.class: Server.java
 	javac Server.java
+
+oj/ready.o: oj/ready.cpp
+	gcc oj/ready.cpp -o oj/ready.o -c
+
+oj/submit.o: oj/submit.cpp
+	gcc oj/submit.cpp -o oj/submit.o -c
