--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,17 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     <configuration>
         <repoToken>ck4KjiOVUnVDPUMXbBWNRjUtK1zHXHjWy</repoToken>
     </configuration>
+</plugin><plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.7.6.201602180812</version>
+    <executions>
+        <execution>
+            <id>prepare-agent</id>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+        </execution>
+    </executions>
 </plugin></plugins></build>
 </project>
