--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,26 @@ http://maven.apache.org/maven-v4_0_0.xsd">
         <repoToken>ck4KjiOVUnVDPUMXbBWNRjUtK1zHXHjWy</repoToken>
     </configuration>
 </plugin><plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.7.6.201602180812</version>
-    <executions>
-        <execution>
-            <id>prepare-agent</id>
-            <goals>
-                <goal>prepare-agent</goal>
-            </goals>
-        </execution>
-    </executions>
-</plugin></plugins></build>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.7</version>
+    <configuration>
+        <format>xml</format>
+        <maxmem>256m</maxmem>
+        <!-- aggregated reports for multi-module projects -->
+        <aggregate>true</aggregate>
+    </configuration>
+</plugin></plugins></build><reporting>
+	<plugins>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>cobertura-maven-plugin</artifactId>
+			<configuration>
+				<formats>
+					<format>xml</format>
+				</formats>
+			</configuration>
+		</plugin>
+	</plugins>
+</reporting>
 </project>
