--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
  
  
 after_success:
-  - mvn clean test jacoco:report coveralls:report
+  - mvn clean test cobertura:cobertura coveralls:report
 # script-orig:
 #  - make -f "Travis.mak" all
 #  - java oj.test
